--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-# Source - https://stackoverflow.com/a
-# Posted by Ben Souchet
-# Retrieved 2025-12-08, License - CC BY-SA 4.0
-
+markdown: kramdown
 kramdown:
-  input: Kramdown
+  input: GFM 
+  enable_coderay: false
+  parse_block_html: true 
+  parse_span_html: true
